--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
+
 <!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, inicial-scale=1,0">
 	<title>Natalia Ambrosio</title>
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
+	<link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Raleway&family=Shadows+Into+Light&display=swap" rel="stylesheet">
 </head>
 <body>
 <header>
@@ -13,9 +16,30 @@
       <li><a href="#">Portfólio</a></li>
       <li><a href="#">Contato</a></li>
     </ul>
-  </nav>
+    </nav>
+  <div>
   <h1 class="site-title">Natalia Ambrosio</h1>
-  <h2 class="site-subtitle">jr.frontend developer</h2>
+  <h2 class="site-subtitle">jr.frontend developer</h2>	
+  </div>  
 </header>
+<section class="Portfólio">
+  <h2>Portfólio</h2>
+  <figure>
+    <img class="img-portfolio" src="./img/ecommerce-creditos-s-o-c-i-a-l-c-u-t-unsplash.jpg" alt="eCommerce">
+    <figcaption>eCommerce</figcaption>
+  </figure>
+  <figure>
+    <img class="img-portfolio" src="./img/mobile-creditos-nate-grant-unsplash.jpg" alt=">Mobile">
+    <figcaption>Mobile</figcaption>
+  </figure>
+  <figure>
+    <img class="img-portfolio" src="./img/webdesign-creditos-domenico-loia-unsplash.jpg" alt="Web design">
+    <figcaption>Web design</figcaption>
+  </figure>
+  <figure>
+    <img class="img-portfolio" src="./img/projpessoais-creditos-hal-gatewood-unsplash.jpg" alt="Projetos pessoais">
+    <figcaption>Projetos pessoais</figcaption>
+  </figure>
+</section>
 </body>
 </html>
