--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <header>
   <nav class="menu">
     <ul>
-      <li><a href="#Sobre">Sobre</a></li>
-      <li><a href="#Portfolio">Portfolio</a></li>
-      <li><a href="#Contato">Contato</a></li>
+      <li><a href="#">Sobre</a></li>
+      <li><a href="#">Projetos</a></li>
+      <li><a href="#">Contato</a></li>
     </ul>
     </nav>
   <div>
@@ -42,5 +42,21 @@
     </figure>
   </div>
   </section>
+  <section class="contato" id="contato">
+		<h2>Contato</h2>
+	
+		<div class="grid icons">
+      
+			<a target="_blank" href="https://github.com/Naty1984">
+				<i class="fab fa-github"></i>
+			</a>
+			<a target="_blank" href="https://twitter.com/Naty__Ambrosio">
+				<i class="fab fa-twitter"></i>
+			</a>
+			<a target="_blank" href="https://linkedin.com/in/natalia-ambrosio-77a00723">
+				<i class="fab fa-linkedin"></i>
+      </a>
+      </div>
+    </section>   
 </body>
 </html>
