--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Natalia Ambrosio</title>
     <link rel="stylesheet" href="css/estilos.css">
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Raleway&family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -50,13 +51,13 @@
         <div class="grid icons">
 
             <a target="_blank" href="https://github.com/Naty1984">
-                <i class="fab fa-github"></i>
+                <i class="fa fa-github"></i>
             </a>
             <a target="_blank" href="https://twitter.com/Naty__Ambrosio">
-                <i class="fab fa-twitter"></i>
+                <i class="fa fa-twitter"></i>
             </a>
             <a target="_blank" href="https://linkedin.com/in/natalia-ambrosio-77a00723">
-                <i class="fab fa-linkedin"></i>
+                <i class="fa; fa-linkedin"></i>
             </a>
         </div>
     </section>
